--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- <link rel="stylesheet" href="_layout/css/skins/yellow.css"> -->
     
     <!-- /// Google Fonts ////////  -->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
     
     <!-- /// FontAwesome Icons 4.0.3 ////////  -->
 	<link rel="stylesheet" href="_layout/css/fontawesome/font-awesome.min.css">
